--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -14,7 +14,6 @@
     "@types/express": "^4.17.13",
     "@types/mocha": "^9.1.1",
     "@types/morgan": "^1.9.3",
-    "@types/mysql": "^2.15.21",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
     "chai": "^4.3.6",
@@ -39,7 +38,7 @@
     "joi": "^17.6.0",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
-    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "winston": "^3.8.1"
   }
 }
