--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -9,8 +9,17 @@ services:
     image: mysql
     # NOTE: use of "mysql_native_password" is not recommended: https://dev.mysql.com/doc/refman/8.0/en/upgrading-from-previous-series.html#upgrade-caching-sha2-password
     # (this is just an example, not intended to be a production configuration)
-    command: --default-authentication-plugin=mysql_native_password
+    command: --authentication_policy=mysql_native_password
     restart: always
     volumes:
-      - ./database:/docker-entrypoint-initdb.d
+      - ./database/scripts:/docker-entrypoint-initdb.d
+      - ./database/data:/var/lib/mysql
     env_file: .env
+    ports:
+      - 3306:3306
+
+  adminer-db:
+    image: adminer
+    restart: always
+    ports:
+      - 8081:8080
