--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -36,8 +36,10 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "joi": "^17.6.0",
+    "knex": "^2.3.0",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "winston": "^3.8.1"
   }
