--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -12,6 +12,7 @@
     "@types/chai": "^4.3.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/joi": "14.3.3",
     "@types/mocha": "^9.1.1",
     "@types/morgan": "^1.9.3",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
@@ -33,14 +34,18 @@
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "@types/node-rsa": "^1.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "joi": "^17.6.0",
+    "joi": "14.3.1",
+    "joi-i18n": "13.1.3",
     "knex": "^2.3.0",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
+    "node-rsa": "^1.1.1",
+    "uuidv4": "^6.2.13",
     "winston": "^3.8.1"
   }
 }
