--- a/app/backend/Dockerfile
+++ b/app/backend/Dockerfile
@@ -1,9 +1,10 @@
 FROM node:16-alpine3.14
 
-WORKDIR /home/node/app
+WORKDIR /home/node/.ssh
 
 RUN apk add --no-cache openssh
-RUN ssh-keygen -t rsa -b 4096 -f ./id_rsa
+RUN ssh-keygen -q -t rsa -b 4096 -f /home/node/.ssh/id_rsa
 
+RUN chmod a+r /home/node/.ssh/id_rsa
 
-
+WORKDIR /home/node/app
