--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -7,7 +7,9 @@
     "dev": "ts-node-dev src/server.ts",
     "lint": "eslint --ext .js,.ts .",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "cross-env NODE_ENV=test ts-mocha",
+    "test:cov": "cross-env NODE_ENV=test nyc ts-mocha"
   },
   "devDependencies": {
     "@types/chai": "^4.3.3",
@@ -19,6 +21,7 @@
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
     "chai": "^4.3.6",
+    "cross-env": "^7.0.3",
     "eslint": "^8.23.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
@@ -29,6 +32,7 @@
     "nyc": "^15.1.0",
     "prettier": "^2.7.1",
     "sinon": "^14.0.0",
+    "ts-mocha": "^10.0.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.2"
