--- a/app/backend/.mocharc.yaml
+++ b/app/backend/.mocharc.yaml
@@ -8,5 +8,6 @@ exclude:
   - "src/Libs/Morgan.ts"
   - "src/database/index.ts"
   - "src/routes/index.ts"
+  - "src/repositories/*.ts"
 spec:
   - "tests/**/*.spec.ts"
