--- a/app/backend/.nycrc.yaml
+++ b/app/backend/.nycrc.yaml
@@ -13,6 +13,7 @@ exclude:
   - "src/database/index.ts"
   - "src/routes/index.ts"
   - "src/config/*.ts"
+  - "src/repositories/*.ts"
 settings:
   lines: 100
   branches: 100
