--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -45,6 +45,7 @@
     "joi": "14.3.1",
     "joi-i18n": "13.1.3",
     "knex": "^2.3.0",
+    "knex-paginate": "^3.0.1",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
