--- a/Documentação/APIs/Team.yaml
+++ b/Documentação/APIs/Team.yaml
@@ -25,6 +25,8 @@ paths:
           application/json:
             schema:
               $ref: "#/components/schemas/TeamRequired"
+      security:
+        - BearerAuth: []
       responses:
         201:
           description: CREATED
@@ -33,7 +35,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/ResponseCodeMessage"
               examples:
-                UserCreated:
+                TeamCreated:
                   $ref: "#/components/schemas/ResponseTeamCreated"
         400:
           description: BAD REQUEST
@@ -42,7 +44,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/ResponseCodeMessage"
               examples:
-                ValidationErrorEmail:
+                ValidationErrorName:
                   $ref: "#/components/schemas/ResponseValidationErrorName"
                 AlreadyHaveTeamInDatabase:
                   $ref: "#/components/schemas/ResponseAlreadyHave"
@@ -95,7 +97,9 @@ paths:
           in: query
           required: false
           schema:
-            type: string
+            type: strin
+      security:
+        - BearerAuth: []
       responses:
         200:
           description: OK
@@ -112,8 +116,6 @@ paths:
               examples:
                 ValidationError:
                   $ref: "#/components/schemas/ResponseValidationError"
-                AlreadyHaveTeamInDatabase:
-                  $ref: "#/components/schemas/ResponseAlreadyHave"
         401:
           description: UNAUTHORIZED
           content:
@@ -133,7 +135,7 @@ paths:
                 InternalServerError:
                   $ref: "#/components/schemas/InternalServerError"
 
-  /time/{id}:
+  /team/{id}:
     get:
       summary: Get team
       description: This resource get individual team
@@ -146,7 +148,9 @@ paths:
           schema:
             type: number
           min: 1
-          max: 99999999999
+          max: 999999999
+      security:
+        - BearerAuth: []
       responses:
         200:
           description: OK
@@ -210,6 +214,8 @@ paths:
           application/json:
             schema:
               $ref: "#/components/schemas/TeamRequired"
+      security:
+        - BearerAuth: []
       responses:
         200:
           description: OK
@@ -270,7 +276,9 @@ paths:
           schema:
             type: number
             min: 1
-            max: 99999999999
+            max: 9999999999
+      security:
+        - BearerAuth: []
       responses:
         200:
           description: OK
@@ -363,7 +371,7 @@ components:
     ResponseValidationErrorName:
       value:
         code: "0002"
-        message: '[name] "name" is required'
+        message: '[nome] "nome" is required'
     ResponseValidationErrorId:
       value:
         code: "0002"
