--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "@joi/date": "^2.1.0",
     "@types/node-rsa": "^1.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.1",
