--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -18,6 +18,7 @@
     "@types/joi": "14.3.3",
     "@types/mocha": "^9.1.1",
     "@types/morgan": "^1.9.3",
+    "@types/sinon": "^10.0.13",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
     "chai": "^4.3.6",
